--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "oddyssea",
-  "version": "0.1.0",
+  "version": "0.5.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aframe": "^1.4.2",
+    "aframe-particle-system-component": "^1.1.3",
+    "aframe-react": "^4.4.0",
     "axios": "^1.4.0",
     "jquery": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
-    "three": "^0.154.0",
     "web-vitals": "^2.1.4"
-  },
-  "exports": {
-    "./three.module.js": "./build/three.module.js"
   },
   "scripts": {
     "start": "react-scripts start",
