--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "axios": "^1.4.0",
     "jquery": "^3.7.0",
     "react": "^18.2.0",
+    "react-360-web": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "three": "0.154.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
